# angina

./: .gitignore  CMakeLists.txt  README.md  main.cpp
En/.metadata/: version.ini
Release/: CMakeCache.txt  Makefile  chess  cmake_install.cmake
aota/: Aota.cpp  Aota.h
chess/: Bishop.cpp  Bishop.h  Cell.h  Chess.cpp  Chess.h  Constants.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rank.h  Rook.cpp  Rook.h  Side.h  State.h  knightmoves.txt
chess-entrypoint/: ChessEntryPoint.cpp  ChessEntryPoint.h
chess-game/ai/: AI.cpp  AI.h  ScoredMove.cpp  ScoredMove.h
chess-game/board/: Board.cpp  Board.h  Cell.cpp  Cell.h  CellUtils.cpp  CellUtils.h  PieceSelectionManager.cpp  PieceSelectionManager.h
chess-game/enums/: ChessAssets.h
chess-game/pages/: ChessPage.cpp  ChessPage.h  LandingPage.cpp  LandingPage.h
chess-game/pieces/: Move.cpp  Move.h  Piece.cpp  Piece.h  PieceMoveGenerator.cpp  PieceMoveGenerator.h  PieceObject.cpp  PieceObject.h  PieceValue.h  ValidMovesGenerator.cpp  ValidMovesGenerator.h
chess-game/states/: ChessState.h
chess-game/utils/: VectorShuffler.cpp  VectorShuffler.h
cmake_helpers/: helpers.cmake
cmake_helpers/find_modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
config/: Config.h  ConfigData.h  ConfigLoader.cpp  ConfigLoader.h  Globals.h  config.json
core/math/: MathUtils.h
core/math/geometry/: Geometry.cpp  Geometry.h
engine/: Engine.cpp  Engine.h
engine/behaviour/: Behaviour.h  ObjectBehaviour.h
engine/components/buttons/: BaseButton.cpp  BaseButton.h  RectTextButton.cpp  RectTextButton.h
engine/components/foldergallery/: FolderGallery.cpp  FolderGallery.h
engine/components/textstack/: TextStack.cpp  TextStack.h
engine/config/: EngineConfig.h
engine/factory/: GraphicsFactory.cpp  GraphicsFactory.h
engine/managers/: ButtonManager.cpp  ButtonManager.h  EventManager.cpp  EventManager.h
engine/movement/: LinearFixedMovementManager.cpp  LinearFixedMovementManager.h
engine/primitives/: MovingObject.cpp  MovingObject.h
engine/primitives/cell/: Cell.cpp  Cell.h  CellUtils.h
engine/repositories/: TextRepository.cpp  TextRepository.h
engine/screen/: Screen.cpp  Screen.h
engine/sprites/: Sprite.cpp  Sprite.h
engine/widget/: Widget.cpp  Widget.h
enginev2/: GameEngine.cpp  GameEngine.h
enginev2/collisions/: BoundingBox.cpp  BoundingBox.h  CollisionDetector.cpp  CollisionDetector.h
enginev2/components/: AnimationComponent.cpp  AnimationComponent.h  GameObjectComponent.cpp  GameObjectComponent.h  ID.h  LineComponent.cpp  LineComponent.h  PixelComponent.cpp  PixelComponent.h  PrimitivesComponent.h  PrimitivesStorage.h  RectangleComponent.cpp  RectangleComponent.h  SurfaceComponent.cpp  SurfaceComponent.h  TextureComponent.cpp  TextureComponent.h
enginev2/debug/: Debug.cpp  Debug.h
enginev2/events/: GlobalInputComponent.cpp  GlobalInputComponent.h
enginev2/graphics/animation/: Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h
enginev2/graphics/models/: Color.cpp  Dimensions.h  Height.h  Line.cpp  Line.h  Pixel.cpp  Pixel.h  Point.cpp  Point.h  Width.h
enginev2/models/: Direction.h  GameObject.cpp  GameObject.h
enginev2/movement/: MovementCmpt.cpp  MovementCmpt.h
enginev2/platform/thread/: ThreadUtils.cpp  ThreadUtils.h
enginev2/platform/time/: TimeUtils.h
enginev2/storage/: Container.h
examples/SkeletalRainOfBlood/: Game.cpp  Game.h  Paddle.h
examples/chess/: CellUtils.cpp  CellUtils.h  ChessGame.cpp  ChessGame.h  GameConfig.h
examples/chess/chess-engine/: BoardBoundsPieceMoveGenerator.cpp  BoardBoundsPieceMoveGenerator.h  BoundsMoveGenerator.cpp  BoundsMoveGenerator.h  Cell.cpp  Cell.h  ChessBoard.cpp  ChessBoard.h  ChessEngine.cpp  ChessEngine.h  ChessMoveLog.cpp  ChessMoveLog.h  ChessMoveManager.cpp  ChessMoveManager.h  ChessState.h  FriendlyFireExcludedMoveGenerator.cpp  FriendlyFireExcludedMoveGenerator.h  Move.cpp  Move.h  MoveLogScreen.h  MoveLogWidget.cpp  MoveLogWidget.h  Piece.h  (+14 more)
examples/test/: HeroController.cpp  HeroController.h  Test.cpp  Test.h  TestEngine.cpp  TestEngine.h
examples/towerdefence/: HeroController.cpp  HeroController.h  TDConfig.h  TowerDefence.cpp  TowerDefence.h
exceptions/: BaseException.cpp  BaseException.h  GraphicsInitException.cpp  GraphicsInitException.h  ResourceLoadException.cpp  ResourceLoadException.h  WindowInitException.cpp  WindowInitException.h
platform/filesys/: FileSystem.h
platform/ids/: ForwardIdGenerator.cpp  ForwardIdGenerator.h  IdGenerator.cpp  IdGenerator.h  ReverseIdGenerator.cpp  ReverseIdGenerator.h
platform/thread/: ThreadUtils.cpp  ThreadUtils.h
platform/time/: Time.cpp  Time.h  TimeUtils.h
renderer/: Renderer.cpp  Renderer.h
renderer/drawable/: Drawable.cpp  Drawable.h
renderer/primitives/: Button.cpp  Button.h  Color.cpp  Color.h  Dimensions.cpp  Dimensions.h  Grid.cpp  Grid.h  Line.cpp  Line.h  Object.cpp  Object.h  Point.cpp  Point.h  Text.cpp  Text.h  Transformation.cpp  Transformation.h
renderer/repositories/: Repository.h  SurfaceRepository.cpp  SurfaceRepository.h  TextRepository.cpp  TextRepository.h  TextureRepository.h
renderer/shapes/: Rect.cpp  Rect.h
renderer/utils/: PrimitivesUtils.cpp  PrimitivesUtils.h
resources/: Resources.h
resources/engine/: Thumbs.db
resources/srb/: Thumbs.db
sdl/components/: Button.cpp  Button.h  Surface.cpp  Surface.h  Transformer.cpp  Transformer.h  Window.cpp  Window.h
sdl/engine/: Engine.cpp  Engine.h
sdl/events/: InputEvent.cpp  InputEvent.h
sdl/graphics/: Drawable.cpp  Drawable.h  Engine.cpp  Engine.h  GlobalRenderer.cpp  GlobalRenderer.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Transformer.cpp  Transformer.h
sdl/primitives/: Color.cpp  Color.h  Dimensions.cpp  Dimensions.h  Point.cpp  Point.h  Rect.cpp  Rect.h
sdl/resources/: ImageResource.cpp  ImageResource.h  ResourceLoader.cpp  ResourceLoader.h
spacekillz/: SpaceKillz.cpp  SpaceKillz.h
test/: Test.cpp  Test.h
(+85 files in other folders)
